# ==============================================================================
# ReadLine CMake File
# ==============================================================================

INCLUDE_DIRECTORIES("readline")

# include subdirectories -------------------------------------------------------
ADD_SUBDIRECTORY(readline)

